--- a/gui/images.qrc
+++ b/gui/images.qrc
@@ -1,5 +1,5 @@
 <RCC>
   <qresource prefix="/images">
-    <file alias='cta-logo-mini.png'>images/CTA-LOGO.png</file>
+    <file alias='cta-logo-mini.png'>images/CTA-LOGO_80heigh.png</file>
   </qresource>
 </RCC>
